--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toggle": "^1.1.1",
     "@tabler/icons-react": "^3.28.1",
     "@uiw/react-md-editor": "^4.0.5",
     "appwrite": "^16.1.0",
@@ -18,6 +20,7 @@
     "immer": "^10.1.1",
     "lucide-react": "^0.473.0",
     "next": "15.1.4",
+    "next-themes": "^0.4.4",
     "node-appwrite": "^14.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
